--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API Tani Direct adalah sebuah API untuk mengelola informasi petani, produk, kategori, promo, pembeli, transaksi, jadwal pengiriman, dan distributor.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "jest",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
     "rate-limiter-flexible": "^5.0.3"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
