--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "API Tani Direct adalah sebuah API untuk mengelola informasi petani, produk, kategori, promo, pembeli, transaksi, jadwal pengiriman, dan distributor.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest",
     "start": "node server.js",
@@ -33,6 +33,7 @@
     "rate-limiter-flexible": "^5.0.3"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.11",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
