--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=tani_direct
 JWT_SECRET=plisjuara
 SESSION_SECRET=plisjuara
 DATABASE_URL="mysql://root:123123@localhost:3306/tani_direct"
+MIDTRANS_SERVER_KEY="SB-Mid-server-xe5aO3OjbdphSt8YkiHwOaUD"
