--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.16.1",
-    "rate-limiter-flexible": "^5.0.3"
+    "rate-limiter-flexible": "^5.0.3",
+    "short-uuid": "^5.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
