Update vercel.json and package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon server.js",
     "build": "prisma generate"
   },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
