Update error function serverless

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,6 @@
       "dest": "server.js",
       "methods": ["GET", "PUT", "PATCH", "DELETE", "POST", "OPTIONS`"]
     }
-  ]
+  ],
+  "buildCommand": "npm run build"
 }
