--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "prisma generate"
+    "build": "prisma generate && echo 'Build completed!'",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
