--- a/.env
+++ b/.env
@@ -1,9 +1,17 @@
 PORT=4000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=123123
-DB_NAME=tani_direct
-JWT_SECRET=plisjuara
-SESSION_SECRET=plisjuara
-DATABASE_URL="mysql://root:123123@localhost:3306/tani_direct"
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=123123
+# DB_NAME=tani_direct
+# JWT_SECRET=plisjuara
+# SESSION_SECRET=plisjuara
+# DATABASE_URL="mysql://root:123123@localhost:3306/tani_direct"
 MIDTRANS_SERVER_KEY="SB-Mid-server-xe5aO3OjbdphSt8YkiHwOaUD"
+POSTGRES_URL="postgres://default:TbIdLl1q8iwR@ep-bitter-cake-a1puy8gc-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:TbIdLl1q8iwR@ep-bitter-cake-a1puy8gc-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:TbIdLl1q8iwR@ep-bitter-cake-a1puy8gc-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:TbIdLl1q8iwR@ep-bitter-cake-a1puy8gc.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-bitter-cake-a1puy8gc-pooler.ap-southeast-1.aws.neon.tech"
+POSTGRES_PASSWORD="TbIdLl1q8iwR"
+POSTGRES_DATABASE="verceldb"
