--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^5.17.0",
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -36,6 +37,7 @@
     "mysql2": "^3.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.12.0",
     "prisma": "^5.17.0",
     "rate-limiter-flexible": "^5.0.3",
     "short-uuid": "^5.2.0",
