--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT=4000
 # DB_USER=root
 # DB_PASSWORD=123123
 # DB_NAME=tani_direct
-# JWT_SECRET=plisjuara
-# SESSION_SECRET=plisjuara
+JWT_SECRET=plisjuara
+SESSION_SECRET=plisjuara
 # DATABASE_URL="mysql://root:123123@localhost:3306/tani_direct"
 MIDTRANS_SERVER_KEY="SB-Mid-server-xe5aO3OjbdphSt8YkiHwOaUD"
 POSTGRES_URL="postgres://default:TbIdLl1q8iwR@ep-bitter-cake-a1puy8gc-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
