change storage image

--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-bitter-cake-a1puy8gc-pooler.ap-southeast-1.aws.neon.tech"
 POSTGRES_PASSWORD="TbIdLl1q8iwR"
 POSTGRES_DATABASE="verceldb"
+CLOUDINARY_CLOUD_NAME=dqj2k0khn
+CLOUDINARY_API_KEY=375532824294237
+CLOUDINARY_API_SECRET=BXqJIRydv46gzi46TclN6xy-FcY
