--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@prisma/adapter-pg": "^5.17.0",
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -35,15 +34,12 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
     "prisma": "^5.17.0",
     "rate-limiter-flexible": "^5.0.3",
-    "short-uuid": "^5.2.0",
-    "uuid": "^10.0.0"
+    "short-uuid": "^5.2.0"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
